# Octopuzzler

./: .gitignore  CMakeLists.txt  LICENSE  OutrospectionGame.sln  README.md  azure-pipelines.yml  cmake.toml  compile_commands.json  run.sh  vcpkg.json  vcpkg_config.cmake  wrun.sh
.github/workflows/: ccpp.yml  dev.yml  main.yml
Libraries/glfw/lib-vc2010/: glfw3dll.lib
Libraries/glfw/lib-vc2012/: glfw3.lib  glfw3dll.lib
Libraries/glfw/lib-vc2013/: glfw3.lib  glfw3dll.lib
Libraries/include/GLAD/: glad.h
Libraries/lib/: freetype.lib
Outrospection/: AllLevels.h  AnimatedTexture.cpp  AnimatedTexture.h  Billboard.cpp  Billboard.h  Bounds.cpp  Bounds.h  Camera.h  Character.cpp  Character.h  Constants.h  Controller.h  Core.h  GUIInventory.cpp  GUIInventory.h  GameSettings.cpp  GameSettings.h  Inventory.cpp  Inventory.h  KeyBinding.cpp  KeyBinding.h  KeyBindings.cpp  KeyBindings.h  Macros.h  Mesh.h  MeshCube.cpp  MeshCube.h  MeshSphere.cpp  MeshSphere.h  Model.h  ModelLoader.cpp  MultiTexture.cpp  MultiTexture.h  ObjectGeneral.cpp  ObjectGeneral.h  ObjectProcedural.h  ObjectRail.cpp  ObjectRail.h  OpenGL.h  Outrospection.cpp  (+31 more)
Outrospection/Core/: Camera.cpp  Camera.h  Character.cpp  Character.h  Layer.h  LayerStack.cpp  LayerStack.h  ObjectGeneral.cpp  ObjectGeneral.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  Scene.cpp  Scene.h
Outrospection/Core/Rendering/: AnimatedTexture.cpp  AnimatedTexture.h  Billboard.cpp  Billboard.h  FreeType.h  MarchingCubesData.h  Mesh.cpp  Mesh.h  MeshCube.cpp  MeshMarchedCube.cpp  MeshMarchedCube.h  ModelLoader.cpp  ModelLoader.h  MultiTexture.cpp  MultiTexture.h  OpenGL.h  Resource.cpp  Resource.h  Shader.cpp  (+8 more)
Outrospection/Events/: Event.h  EventBus.h  EventHandlerFunction.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Outrospection/Item/: Item.cpp  Item.h  ItemStack.cpp  ItemStack.h
Outrospection/res/: billboard.frag  billboard.vert  light.vert  lightless.frag  obj.frag  sky.frag  sky.vert
Scripts/io_scene_ocl/: __init__.py  export_ocl.py
Scripts/io_scene_omd/: __init__.py  export_omd.py
cmake/: Emscripten.cmake
res/ShaderData/: CRT.frag  ES_crt.frag  ES_crt.vert  ES_glyph.frag  ES_ink.frag  ES_screen.frag  ES_screen.vert  ES_sprite.frag  ES_sprite.vert  crt.frag  ink.frag  screen.frag  sprite.frag
res/StageData/: level0  level00  level01  level02  level03  level04  level05  level06  level07  level08  level09  level1  level10  level11  level12  level13  level14  level15  level16  level17  level19  level2  level3  level6  level7  level8  level9
src/: AllLevels.h  Bounds.cpp  Bounds.h  Constants.h  Core.h  KeyBinding.cpp  LevelReader.h  Outrospection.cpp  Outrospection.h  Platform.h  Source.cpp  Types.h  Util.cpp  Util.h
src/Core/: AudioManager.cpp  AudioManager.h  LayerStack.cpp  LayerStack.h  PreInitialization.h  Registry.h  jthread.cpp  jthread.h
src/Events/: Event.h  EventBus.h
(+131 files in other folders)
